--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,20 +1,23 @@
 <header class="navbar navbar-expand-lg navbar-dark fixed-top nga-navbar">
   <nav class="container" aria-label="Main navigation">
-    <a href="https://github.com/ganatan/angular-app" class="d-none d-sm-block">
-      <img style="position: absolute; top: 0; right: 0; border: 0; z-index: 2000;"
-        src="https://api.ganatan.com/articles/img/forkme.png" alt="Fork me on GitHub"
-        data-canonical-src="https://api.ganatan.com/articles/img/forkme.png" />
-    </a>
+
     <a routerLink="/" class="navbar-brand" alt="Accueil" aria-label="Ganatan">
-      <img src="./assets/params/images/logo/ganatan-logo.png" srcset="./assets/params/images/logo/ganatan-logo.png,
-      ./assets/params/images/logo/ganatan-logo@2x.png 2x" width="25" height="25" alt="Ganatan Logo">
-      <span class="nga-navbar-logo mx-1">ganatan</span>
+      <img src="./assets/params/images/logo/brvlogo.png" srcset="./assets/params/images/logo/brvlogo.png" width="70" >
+      <span class="nga-navbar-logo mx-1">Blockchain Realtime Voting</span>
     </a>
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse"
+    <!-- <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse"
       aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
-    </button>
+    </button> -->
     <div class="collapse navbar-collapse" id="navbarCollapse">
+      <ul class="navbar-nav mx-auto">
+        <li class="nav-item">
+          <a class="nav-link" aria-current="page" routerLink="/voting-result">On Vote</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" aria-current="page" routerLink="/Voting2">Voting Results</a>
+        </li>
+      </ul>
       <ul class="navbar-nav mx-auto">
         <li class="nav-item">
           <a class="nav-link" aria-current="page" routerLink="/angular">
