--- a/src/app/modules/application/voting2/voting-results/voting-results.component.html
+++ b/src/app/modules/application/voting2/voting-results/voting-results.component.html
@@ -1,14 +1,32 @@
 <p>voting-results</p>
 
 <div class="accordion" id="accordionExample">
-  <div class="accordion-item">
+  <div class="accordion-item" *ngFor="let item of items; index as i">
+    <!-- <h1>naom {{item.VotingboxID}}</h1> -->
     <h2 class="accordion-header" id="headingOne">
-      <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne"
-        aria-expanded="true" aria-controls="collapseOne">
-        Accordion Item #1
+      <button class="accordion-button" type="button" data-bs-toggle="collapse" [attr.data-bs-target]="'#collapseOne' + i"
+        aria-expanded="false" [attr.aria-controls]="'collapseOne' + i">
+        Company: {{item.CompanyName}}<br>
+        MeetingType: {{item.MeetingTypeDescription}} <br><!--"annual meeting"-->
+        {{item.MeetingAddress}} <br><!--""Millennium Tower, 23 Aranha st., 22nd Floor, Tel Aviv, Israel or via Zoom.""-->
+        {{item.MeetingDateTime}}
+        {{item.MeetingCloseDateTime}}
+
+
+<!--
+
+        "MeetingAddress": "Millennium Tower, 23 Aranha st., 22nd Floor, Tel Aviv, Israel or via Zoom.",
+        "SecurityNumber": 281014,
+        "SecurityName": "איי.סי.אל 1 ש\"ח ",
+        "SecurityType": 1,
+        "SecurityTypeDescription": "Share",
+        "MeetingEffectiveDate": "2022-02-28T00:00:00.000Z",
+        "DetailedTopicsFile": "Proxy_Statement_isa.pdf",
+        "VotingFile": "Written_Ballot_isa.pdf", -->
+
       </button>
     </h2>
-    <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="headingOne"
+    <div [attr.id]="'collapseOne' + i"  class="accordion-collapse collapse hide" aria-labelledby="headingOne"
       data-bs-parent="#accordionExample">
       <div class="accordion-body">
         <strong>This is the first item's accordion body.</strong> It is shown by default, until the
