--- a/src/app/modules/application/boxoffice/boxoffice.component.html
+++ b/src/app/modules/application/boxoffice/boxoffice.component.html
@@ -4,7 +4,7 @@
       <div class="d-flex">
         <div class="d-flex me-auto">
           <input type="text" class="form-control me-2" id="name" placeholder="Votes ...">
-          <button type="button" class="btn nga-btn-boxoffice-primary btn-sm nga-btn-boxoffice"><i class="fa fa-search"></i></button>
+          <button type="button" class="btn nga-btn-boxoffice-primary btn-sm nga-btn-boxoffice"><i class="fa fa-search"> </i></button>
         </div>
         <div class="d-flex me-auto d-none d-md-block">
           <div class="pt-2 ml-4">
@@ -218,38 +218,39 @@
             <th style="cursor: pointer"
               class="text-info font-weight-bold text-center d-none d-md-table-cell d-lg-table-cell d-xl-table-cell">
               Rank<i class="ms-1 fas fa-arrows-alt-v filterEnabled"></i></th>
-            <th class="text-center text-danger">Company Name</th>
-            <th class="text-center text-danger">Security</th>
-            <th style="cursor: pointer" class="font-weight-bold text-center">Meeting Close DateTime<i
-                class="ms-1 fas fas fa-arrows-alt-v filterEnabled"></i></th>
+            <th class="text-center d-none d-md-table-cell d-lg-table-cell d-xl-table-cell">Company Name</th>
+            <th class="text-center d-none d-md-table-cell d-lg-table-cell d-xl-table-cell">Security</th>
             <th style="cursor: pointer" class="text-center d-none d-md-table-cell d-lg-table-cell d-xl-table-cell">
               Meeting Effective Date<i class="ms-1 fas fa-long-arrow-alt-up"></i>
             </th>
+            <th style="cursor: pointer" class="font-weight-bold text-center">Meeting Close DateTime<i
+              class="ms-1 fas fas fa-arrows-alt-v filterEnabled"></i></th>
             <th style="cursor: pointer" class="text-center d-none d-md-table-cell d-lg-table-cell d-xl-table-cell">
               Status<i class="ms-1 fas fa-long-arrow-alt-up"></i>
             </th>
         </thead>
         <tbody>
-          <tr *ngFor="let item of items; let i=index;">
+          <tr *ngFor="let item of items; let i=index;" >
             <td class="text-info text-center d-none d-md-table-cell d-lg-table-cell d-xl-table-cell">
               <a style="cursor: pointer" (click)="onSelectItemTrailer(item,i)">{{ i + 1 }}</a>
             </td>
-            <td class="text-center text-danger">
-              <a style="cursor: pointer" (click)="onSelectItemTrailer(item,i)">{{item.CompanyName}}</a>
-              <span>{{item.CompanyID}}</span>
-            </td>
-            <td class="text-center text-danger">
-              <a style="cursor: pointer" (click)="onSelectItemTrailer(item,i)">{{item.SecurityName}}</a>
-              <span>{{item.SecurityNumber}}</span>
+            <td class="font-weight-bold text-center">
+              <a style="cursor: pointer ; color: black;" (click)="onSelectItemTrailer(item,i)">{{item.CompanyName}}</a>
+              <span>&nbsp;{{item.CompanyID}}</span>
             </td>
             <td class="font-weight-bold text-center">
-              <a (click)="onSelectItemTrailer(item,i)">{{ item.MeetingEffectiveDate }}</a>
+              <a style="cursor: pointer; color: black;" (click)="onSelectItemTrailer(item,i)">{{item.SecurityName}}</a>
+              <span>&nbsp;{{item.SecurityNumber}}</span>
             </td>
             <td class="font-weight-bold text-center">
-              <a (click)="onSelectItemTrailer(item,i)">{{ item.MeetingCloseDateTime }}</a>
+              <a (click)="onSelectItemTrailer(item,i)">{{ item.MeetingEffectiveDate | date: "dd/MM/yyyy" }}</a>
+            </td>
+            <td class="font-weight-bold text-center">
+              <a (click)="onSelectItemTrailer(item,i)">{{ item.MeetingCloseDateTime | date: "dd/MM/yyyy hh-mm" }}</a>
             </td>
             <td class="text-center text-danger">
-              <a (click)="onSelectItemTrailer(item,i)">{{ GetStatus(item.Status) }} </a>
+              <button type="button" [ngClass]="GetClassStatus(item.Status)">{{ GetStatus(item.Status) }}</button>
+            <!--  <a (click)="onSelectItemTrailer(item,i)">{{ GetStatus(item.Status) }} </a>-->
             </td>
           </tr>
         </tbody>
