--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -29,6 +29,10 @@
           <a class="nav-link" aria-current="page" routerLink="/boxoffice">
             <i class="fas fa-film me-1"></i>Future Votes</a>
         </li>
+        <li class="nav-item">
+          <a class="nav-link" aria-current="page" routerLink="/voteingResults">
+            <i class="fas fa-film me-1"></i>voting Results</a>
+        </li>
       </ul>
       <ul class="navbar-nav me-auto">
         <li class="nav-item">
