--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -17,29 +17,15 @@
           <a class="nav-link" aria-current="page" routerLink="/Voting2">Voting Results</a>
         </li>
       </ul>
-      <ul class="navbar-nav mx-auto">
-        <li class="nav-item">
-          <a class="nav-link" aria-current="page" routerLink="/angular">
-            <i class="fab fa-angular me-1"></i>Angular</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" aria-current="page" routerLink="/bootstrap">
-            <i class="fab fa-bootstrap me-1"></i>Bootstrap</a>
-        </li>
-      </ul>
       <ul class="navbar-nav me-auto">
         <li class="nav-item">
-          <a class="nav-link" aria-current="page" routerLink="/news">
-            <i class="fas fa-photo-video me-1"></i>News</a>
-        </li>
-        <li class="nav-item">
           <a class="nav-link" aria-current="page" routerLink="/boxoffice">
-            <i class="fas fa-film me-1"></i>Future Votes</a>
+            <i class="fas fa-film me-1"></i>Votes</a>
         </li>
-        <li class="nav-item">
+        <!-- <li class="nav-item">
           <a class="nav-link" aria-current="page" routerLink="/voteingResults">
             <i class="fas fa-film me-1"></i>voting Results</a>
-        </li>
+        </li> -->
       </ul>
       <ul class="navbar-nav me-auto">
         <li class="nav-item">
