--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -13,19 +13,19 @@
         <li class="nav-item">
           <a class="nav-link" aria-current="page" routerLink="/voting-result">On Vote</a>
         </li>
-        <li class="nav-item">
+        <!-- <li class="nav-item">
           <a class="nav-link" aria-current="page" routerLink="/Voting2">Voting Results</a>
-        </li>
+        </li> -->
       </ul>
       <ul class="navbar-nav me-auto">
         <li class="nav-item">
           <a class="nav-link" aria-current="page" routerLink="/boxoffice">
             <i class="fas fa-film me-1"></i>Votes</a>
         </li>
-        <!-- <li class="nav-item">
-          <a class="nav-link" aria-current="page" routerLink="/voteingResults">
+        <li class="nav-item">
+          <a class="nav-link" aria-current="page" routerLink="/voteingResults/2">
             <i class="fas fa-film me-1"></i>voting Results</a>
-        </li> -->
+        </li>
       </ul>
       <ul class="navbar-nav me-auto">
         <li class="nav-item">
