--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,6 +1,6 @@
 <header class="navbar navbar-expand-lg navbar-dark fixed-top nga-navbar">
   <nav class="container" aria-label="Main navigation">
-    <a routerLink="/" class="navbar-brand" alt="Accueil" aria-label="Ganatan">
+    <a routerLink="/voting-result" class="navbar-brand" alt="Accueil" aria-label="Ganatan">
       <img src="./assets/params/images/logo/brvlogo.png" srcset="./assets/params/images/logo/brvlogo.png" width="70" >
       <span class="nga-navbar-logo mx-1">Blockchain Realtime Voting</span>
     </a>
@@ -9,22 +9,18 @@
       <span class="navbar-toggler-icon"></span>
     </button> -->
     <div class="collapse navbar-collapse" id="navbarCollapse">
-      <ul class="navbar-nav mx-auto">
+
+      <ul class="navbar-nav me-auto">
         <li class="nav-item">
           <a class="nav-link" aria-current="page" routerLink="/voting-result">On Vote</a>
         </li>
-        <!-- <li class="nav-item">
-          <a class="nav-link" aria-current="page" routerLink="/Voting2">Voting Results</a>
-        </li> -->
-      </ul>
-      <ul class="navbar-nav me-auto">
         <li class="nav-item">
           <a class="nav-link" aria-current="page" routerLink="/boxoffice">
-            <i class="fas fa-film me-1"></i>Votes</a>
+            Votes</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" aria-current="page" routerLink="/voteingResults/2">
-            <i class="fas fa-film me-1"></i>voting Results</a>
+            voting Results</a>
         </li>
       </ul>
       <ul class="navbar-nav me-auto">
